--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://admmin:Khan@bilal.om90v.mongodb.net/?retryWrites=true&w=majority&appName=Bilal
+MONGO_URI=mongodb+srv://kratoskingdom7:khan@test.ziqbx.mongodb.net/food?retryWrites=true&w=majority&appName=test
 SECRET_KEY=mySecretKey
 PORT=3000
